# goodwatch-monorepo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  docker-compose.yml
flickvibe-data-pipeline/: README.md  docker-compose.yml  pyproject.toml
flickvibe-data-pipeline/src/data_source/: utils.py
flickvibe-data-pipeline/src/data_source/imdb_web/: imdb_crawl_ratings.py  imdb_init_details.py
flickvibe-data-pipeline/src/data_source/tmdb_api/: models.py  tmdb_fetch_details_from_api.py  tmdb_init_details.py
flickvibe-data-pipeline/src/tmdb/: models.py  tmdb_check_daily_dump.py  tmdb_extract_daily_dump.py
flickvibe-data-pipeline/src/tmdb_daily/: models.py  tmdb_check_daily_dump_availability.py  tmdb_extract_daily_dump_data.py
flickvibe-data-pipeline/src/utils/: db.py  file.py  web.py
goodwatch-flows/: .gitignore  Makefile  README.md  pyproject.toml
goodwatch-flows/windmill/: c_weaviate.resource-type.yaml  wmill-lock.yaml
goodwatch-flows/windmill/f/app_custom/: folder.meta.yaml
goodwatch-flows/windmill/f/app_groups/: folder.meta.yaml
goodwatch-flows/windmill/f/app_themes/: folder.meta.yaml
goodwatch-flows/windmill/f/apps/: folder.meta.yaml  stats.app.yaml
goodwatch-flows/windmill/f/combine_data/: folder.meta.yaml
goodwatch-flows/windmill/f/data_source/: common.py  common.script.yaml  folder.meta.yaml  models.py  models.script.yaml
goodwatch-flows/windmill/f/db/: arango.py  arango.script.yaml  cratedb.py  cratedb.script.yaml  folder.meta.yaml  milvus.py  milvus.script.yaml  mongodb.py  mongodb.script.yaml  postgres.py  postgres.script.yaml  qdrant.py  qdrant.script.yaml  (+2 more)
goodwatch-webapp/scripts/: Makefile  connect_db.py  create_sitemaps.py  pyproject.toml  utils.py
(+1503 files in other folders)
