[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alper Ortac", email = "alportac@gmail.com"},
]
dependencies = [
    "prefect>=2.13.1",
    "pandas>=2.1.0",
    "mongoengine>=0.27.0",
    "prefect-dask>=0.2.5",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pydantic>=1.10.12",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

