[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alper Ortac", email = "hello@goodwatch.app"},
]
dependencies = [
    "wmill>=1.181.0",
    "pymongo>=4.5.0",
    "mongoengine>=0.27.0",
    "bs4>=0.0.1",
    "pydantic>=2.4.2",
    "requests>=2.31.0",
    "playwright>=1.38.0",
    "psycopg2>=2.9.9",
    "weaviate-client==4.*",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

